--- a/P006984.opf/meta.yml
+++ b/P006984.opf/meta.yml
@@ -3,5 +3,62 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W22110
   title: གསུང་འབུམ། རྒྱལ་ཚབ་རྗེ། ༼བཀྲས་ལྷུན་པར་རྙིང་བསྐྱར་པར་མ།༽
-  volume: ''
+  volume:
+    16f6540508c04ebebb4ebaeb414487b5:
+      image_group_id: I00KG03914
+      title: Volume 1 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 1
+      total_pages: 512
+    166552f732534629b88a05f0ef36997e:
+      image_group_id: I00KG03915
+      title: Volume 2 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 2
+      total_pages: 605
+    4d9ebda5f8b343108dc5247dbe35c498:
+      image_group_id: I00KG03916
+      title: Volume 3 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 3
+      total_pages: 0
+    be5f62e8f4c9499988ecbb7f737331c3:
+      image_group_id: I00KG03917
+      title: Volume 4 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 4
+      total_pages: 532
+    22f31baf6565471c9d747807b32adeca:
+      image_group_id: I00KG03918
+      title: Volume 5 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 5
+      total_pages: 584
+    7e207f78617145ff8f045825743e4d2c:
+      image_group_id: I00KG03919
+      title: Volume 6 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 6
+      total_pages: 0
+    3fe8303eb51a4ad2b1eddb8954c02b52:
+      image_group_id: I00KG03920
+      title: Volume 7 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 7
+      total_pages: 0
+    bca671dfb25d460db5d66059623b4948:
+      image_group_id: I00KG03921
+      title: Volume 8 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 8
+      total_pages: 0
+    1ebaa324216f425d94fcfe8f72d1eea9:
+      image_group_id: I00KG03922
+      title: Volume 9 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 9
+      total_pages: 0
+    5d19b19ec5a4426d8081566d1fb45384:
+      image_group_id: I00KG03923
+      title: Volume 10 of gsung 'bum/_rgyal tshab rje (gelek)
+      volume_number: 10
+      total_pages: 0
   author: ''
+ebook_metadata:
+  title: གསུང་འབུམ། རྒྱལ་ཚབ་རྗེ། ༼བཀྲས་ལྷུན་པར་རྙིང་བསྐྱར་པར་མ།༽
+  author: ''
+  sku: P006984
+  cover: cover.jpg
+  layers:
+  - pagination
