--- a/P006984.opf/meta.yml
+++ b/P006984.opf/meta.yml
@@ -1,19 +1,22 @@
-id: opecha:P006984
+id: P006984
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W22110
   title: གསུང་འབུམ། རྒྱལ་ཚབ་རྗེ། ༼བཀྲས་ལྷུན་པར་རྙིང་བསྐྱར་པར་མ།༽
-  volume:
+  author: ''
+  volumes:
     16f6540508c04ebebb4ebaeb414487b5:
       image_group_id: I00KG03914
       title: Volume 1 of gsung 'bum/_rgyal tshab rje (gelek)
       volume_number: 1
       total_pages: 512
+      base_file: v001.txt
     166552f732534629b88a05f0ef36997e:
       image_group_id: I00KG03915
       title: Volume 2 of gsung 'bum/_rgyal tshab rje (gelek)
       volume_number: 2
       total_pages: 605
+      base_file: v002.txt
     4d9ebda5f8b343108dc5247dbe35c498:
       image_group_id: I00KG03916
       title: Volume 3 of gsung 'bum/_rgyal tshab rje (gelek)
@@ -24,11 +27,13 @@ source_metadata:
       title: Volume 4 of gsung 'bum/_rgyal tshab rje (gelek)
       volume_number: 4
       total_pages: 532
+      base_file: v003.txt
     22f31baf6565471c9d747807b32adeca:
       image_group_id: I00KG03918
       title: Volume 5 of gsung 'bum/_rgyal tshab rje (gelek)
       volume_number: 5
       total_pages: 584
+      base_file: v004.txt
     7e207f78617145ff8f045825743e4d2c:
       image_group_id: I00KG03919
       title: Volume 6 of gsung 'bum/_rgyal tshab rje (gelek)
@@ -54,7 +59,6 @@ source_metadata:
       title: Volume 10 of gsung 'bum/_rgyal tshab rje (gelek)
       volume_number: 10
       total_pages: 0
-  author: ''
 ebook_metadata:
   title: གསུང་འབུམ། རྒྱལ་ཚབ་རྗེ། ༼བཀྲས་ལྷུན་པར་རྙིང་བསྐྱར་པར་མ།༽
   author: ''
