--- a/P006984.opf/layers/v002/Pagination.yml
+++ b/P006984.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 0cc8aa810c944df6a7da3166e7977365
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7e74b67e625f42d6a814f0bd517bcd7a:
