--- a/P006984.opf/layers/v003/Pagination.yml
+++ b/P006984.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 28dd1b6f09e647379b9ae6d2d8e11d8e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   876185308913419da115bd4995334248:
