--- a/P006984.opf/layers/v004/Pagination.yml
+++ b/P006984.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1d9843761ef8420cab6e2f6165a44c11
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   47d491af60c14aefad9d75ac74dd4824:
