--- a/P006984.opf/layers/v001/Pagination.yml
+++ b/P006984.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1fe3cb6c332b4a86a1d468c59ada9b1c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2eeb2e552f6e4dcf8108fc8638daa14c:
